--- a/.github/workflows/desktop.yml
+++ b/.github/workflows/desktop.yml
@@ -54,6 +54,7 @@ jobs:
           haxelib install SScript 8.1.3
           haxelib git discord_rpc https://github.com/Aidan63/linc_discord-rpc
           # haxelib install hxcpp-debug-server
+          haxelib run lime rebuild hxcpp
           haxelib list
         shell: cmd
       - name: Create Version Tag
@@ -113,6 +114,7 @@ jobs:
           haxelib install SScript 8.1.3
           haxelib git discord_rpc https://github.com/Aidan63/linc_discord-rpc
           # haxelib install hxcpp-debug-server
+          haxelib run lime rebuild hxcpp
           haxelib list
       - name: Create Version Tag
         run: echo "${{github.run_id}}" > VERSION
@@ -151,6 +153,7 @@ jobs:
           haxelib install SScript 8.1.3
           haxelib git discord_rpc https://github.com/Aidan63/linc_discord-rpc
           # haxelib install hxcpp-debug-server
+          haxelib run lime rebuild hxcpp
           haxelib list
       - name: Create Version Tag
         run: echo "${{github.run_id}}" > VERSION
