--- a/.github/workflows/desktop.yml
+++ b/.github/workflows/desktop.yml
@@ -24,7 +24,7 @@ jobs:
 
       - uses: krdlab/setup-haxe@master
         with:
-          haxe-version: latest
+          haxe-version: 4.3.2
       
       - name: Restore Previous Cache
         id: cache-build-windows-restore
