--- a/.github/workflows/desktop.yml
+++ b/.github/workflows/desktop.yml
@@ -58,7 +58,7 @@ jobs:
       - name: Create Version Tag
         run: echo "${{github.run_id}}" > VERSION
       - name: Compile
-        run: haxelib run lime build windows --app-version="4.0.0-${{ github.run_id}}"
+        run: haxelib run lime build windows --app-version="4.0.0-${{ github.run_id}}" -D NO_PRECOMPILED_HEADERS
       - name: Save Current Cache
         id: cache-build-windows-save
         uses: actions/cache/save@main
