--- a/.github/workflows/desktop.yml
+++ b/.github/workflows/desktop.yml
@@ -43,7 +43,8 @@ jobs:
           haxelib git hxcpp https://github.com/HaxeFoundation/hxcpp
           haxelib install lime 7.9.0
           haxelib install openfl 9.2.0
-          haxelib install flixel 5.2.2
+          haxelib --never install flixel
+          haxelib run lime setup flixel
           haxelib install flixel-tools 1.5.1
           haxelib install flixel-ui 2.5.0
           haxelib install flixel-addons 3.0.2
