--- a/.github/workflows/desktop.yml
+++ b/.github/workflows/desktop.yml
@@ -50,9 +50,8 @@ jobs:
           haxelib install flixel-addons
           haxelib install tjson
           haxelib install hxjsonast
-          haxelib git hxCodec https://github.com/polybiusproxy/hxCodec
+          haxelib git hxCodec 2.6.0
           haxelib git linc_luajit https://github.com/Sirox228/linc_luajit
-          haxelib install hscript
           haxelib install SScript
           haxelib git discord_rpc https://github.com/Aidan63/linc_discord-rpc
           haxelib install hxcpp-debug-server
