--- a/.github/workflows/desktop.yml
+++ b/.github/workflows/desktop.yml
@@ -59,11 +59,6 @@ jobs:
         shell: cmd
       - name: Create Version Tag
         run: echo "${{github.run_id}}" > VERSION
-      - name: Setup Lime
-        run: |
-          haxelib run lime setup -alias -y
-          haxelib set hxcpp 4.2.1
-          haxelib set hxCodec 2.5.1
       - name: Compile
         run: haxelib run lime build windows --app-version="4.0.0-${{ github.run_id}}"
       - name: Save Current Cache
@@ -110,7 +105,7 @@ jobs:
           haxelib install flixel-addons
           haxelib install tjson
           haxelib install hxjsonast
-          haxelib git hxCodec https://github.com/polybiusproxy/hxCodec
+          haxelib install hxCodec 2.6.0
           haxelib git linc_luajit https://github.com/Sirox228/linc_luajit
           haxelib install hscript
           haxelib install SScript
