--- a/.github/workflows/desktop.yml
+++ b/.github/workflows/desktop.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Install Haxelib
         run: |
           haxelib setup C:/haxelib
-          haxelib install hxcpp
+          haxelib install hxcpp > /dev/null --quiet
           haxelib install lime
           haxelib install openfl
           haxelib install flixel
