--- a/.github/workflows/desktop.yml
+++ b/.github/workflows/desktop.yml
@@ -25,33 +25,41 @@ jobs:
       - uses: krdlab/setup-haxe@master
         with:
           haxe-version: 4.2.5
+      
+      - name: Restore Previous Cache
+        id: cache-build-windows-restore
+        uses: actions/cache/restore@main
+        with:
+          path: |
+            .haxelib/
+            export/release/windows/haxe/
+            export/release/windows/obj/
+          key: cache-windows-build
 
       # Runs a set of commands using the runners shell
       - name: Install Haxelib
         run: |
           haxelib setup C:/haxelib
-          haxelib install hxcpp > /dev/null --quiet
-          haxelib install lime
-          haxelib install openfl
-          haxelib install flixel
-          haxelib run lime setup flixel
-          haxelib install flixel-tools
-          haxelib install flixel-ui
-          haxelib install flixel-addons
-          haxelib install tjson
-          haxelib install hxjsonast
+          haxelib git hxcpp https://github.com/HaxeFoundation/hxcpp
+          haxelib install lime 8.1.1
+          haxelib install openfl 9.2.1
+          haxelib install flixel 5.2.2
+          haxelib install flixel-tools 1.5.1
+          haxelib install flixel-ui 2.5.0
+          haxelib install flixel-addons 3.0.2
+          haxelib install tjson 1.4.0
           haxelib install hxCodec 2.6.0
-          haxelib git linc_luajit https://github.com/Sirox228/linc_luajit
-          haxelib install SScript
+          haxelib git linc_luajit https://github.com/superpowers04/linc_luajit.git
+          haxelib install SScript 8.1.6
           haxelib git discord_rpc https://github.com/Aidan63/linc_discord-rpc
-          haxelib install hxcpp-debug-server
+          haxelib run lime rebuild hxcpp
           haxelib list
         shell: cmd
       - name: Create Version Tag
         run: echo "${{github.run_id}}" > VERSION
       - name: Compile
-        run: haxelib run lime build windows --app-version="4.0.0-${{ github.run_id}}"
-      
+        run: haxelib run lime build windows --app-version="4.0.0-${{ github.run_id}}" -D NO_PRECOMPILED_HEADERS
+
       - name: Publish Artifact
         uses: actions/upload-artifact@v2.2.4
         with:
@@ -76,22 +84,19 @@ jobs:
           sudo apt-get install libvlccore-dev
           haxelib install hxcpp > /dev/null --quiet
           haxelib setup ~/haxelib
-          haxelib install lime
-          haxelib install openfl
-          haxelib install flixel
-          haxelib run lime setup flixel
-          haxelib run lime setup
-          haxelib install flixel-tools
-          haxelib install flixel-ui
-          haxelib install flixel-addons
-          haxelib install tjson
-          haxelib install hxjsonast
+          haxelib git hxcpp https://github.com/HaxeFoundation/hxcpp
+          haxelib install lime 8.1.1
+          haxelib install openfl 9.2.1
+          haxelib install flixel 5.2.2
+          haxelib install flixel-tools 1.5.1
+          haxelib install flixel-ui 2.5.0
+          haxelib install flixel-addons 3.0.2
+          haxelib install tjson 1.4.0
           haxelib install hxCodec 2.6.0
-          haxelib git linc_luajit https://github.com/Sirox228/linc_luajit
-          haxelib install hscript
-          haxelib install SScript
+          haxelib git linc_luajit https://github.com/superpowers04/linc_luajit.git
+          haxelib install SScript 8.1.6
           haxelib git discord_rpc https://github.com/Aidan63/linc_discord-rpc
-          haxelib install hxcpp-debug-server
+          haxelib run lime rebuild hxcpp
           haxelib list
       - name: Create Version Tag
         run: echo "${{github.run_id}}" > VERSION
@@ -116,23 +121,20 @@ jobs:
       - name: Install Haxelib
         run: |
           haxelib setup ~/haxelib
-          haxelib install hxcpp > /dev/null --quiet
-          haxelib install lime
-          haxelib install openfl
-          haxelib install flixel
-          haxelib run lime setup flixel
-          haxelib run lime setup
-          haxelib install flixel-tools
-          haxelib install flixel-ui
-          haxelib install flixel-addons
-          haxelib install tjson
-          haxelib install hxjsonast
+          haxelib git hxcpp https://github.com/HaxeFoundation/hxcpp
+          haxelib install lime 8.1.1
+          haxelib install openfl 9.2.1
+          haxelib install flixel 5.2.2
+          haxelib install flixel-tools 1.5.1
+          haxelib install flixel-ui 2.5.0
+          haxelib install flixel-addons 3.0.2
+          haxelib install tjson 1.4.0
           haxelib install hxCodec 2.6.0
-          haxelib git linc_luajit https://github.com/Sirox228/linc_luajit
-          haxelib install hscript
-          haxelib install SScript
+          haxelib git linc_luajit https://github.com/superpowers04/linc_luajit.git
+          haxelib install SScript 8.1.6
           haxelib git discord_rpc https://github.com/Aidan63/linc_discord-rpc
-          haxelib install hxcpp-debug-server
+          haxelib install SScript 8.1.6
+          haxelib run lime rebuild hxcpp
           haxelib list
       - name: Create Version Tag
         run: echo "${{github.run_id}}" > VERSION
