--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,14 +57,13 @@ jobs:
           haxelib install hxcpp 4.2.1 > /dev/null
           haxelib install lime 8.1.1
           haxelib install openfl 9.2.1
-          haxelib --never install flixel 5.2.2
-          haxelib run lime setup flixel
+          haxelib install flixel 5.2.2
+          
           haxelib install flixel-tools 1.5.1
-          haxelib install flixel-ui
+          haxelib install flixel-ui 2.5.0
           haxelib install flixel-addons 3.0.2
-          haxelib install tjson
-          haxelib install hxjsonast
-          haxelib install SScript
+          haxelib install tjson 1.4.0
+          haxelib install SScript 8.1.6
           haxelib git hxCodec https://github.com/SPLCoding/hxCodec-but-it-works-xd.git
           haxelib git discord_rpc https://github.com/Aidan63/linc_discord-rpc
           haxelib git linc_luajit https://github.com/Sirox228/linc_luajit
@@ -85,9 +84,8 @@ jobs:
           haxelib run lime config ANDROID_NDK_ROOT $ANDROID_NDK_HOME
           haxelib run lime config JAVA_HOME $JAVA_HOME
           haxelib run lime config ANDROID_SETUP true
-          haxelib set lime 8.1.1
-          haxelib set flixel 5.2.2
-          haxelib set flixel-addons 3.0.2
+          
+          
           haxelib set hxcpp 4.2.1
           haxelib list
         env:
