--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,7 +55,7 @@ jobs:
         run: |
           haxelib setup ~/haxelib
           haxelib install hxcpp 4.2.1 > /dev/null
-          haxelib install lime 
+          haxelib install lime 7.9.0
           haxelib install openfl
           haxelib --never install flixel 5.2.2
           haxelib run lime setup flixel
