--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,17 +54,15 @@ jobs:
       - name: Install Haxelib
         run: |
           haxelib setup ~/haxelib
-          haxelib install hxcpp 4.2.1 > /dev/null
+          haxelib install hxcpp > /dev/null --quiet
           haxelib install lime 7.9.0
-          haxelib install openfl
-          haxelib --never install flixel 5.2.2
-          haxelib run lime setup flixel
+          haxelib install openfl 9.2.1
+          haxelib install flixel 5.2.2
           haxelib install flixel-tools 1.5.1
-          haxelib install flixel-ui
+          haxelib install flixel-ui 2.5.0
           haxelib install flixel-addons 3.0.2
-          haxelib install tjson
-          haxelib install hxjsonast
-          haxelib install SScript
+          haxelib install tjson 1.4.0
+          haxelib install hxCodec 2.6.0
           haxelib git hxCodec https://github.com/SPLCoding/hxCodec-but-it-works-xd.git
           haxelib git discord_rpc https://github.com/Aidan63/linc_discord-rpc
           haxelib git linc_luajit https://github.com/Sirox228/linc_luajit
@@ -85,10 +83,6 @@ jobs:
           haxelib run lime config ANDROID_NDK_ROOT $ANDROID_NDK_HOME
           haxelib run lime config JAVA_HOME $JAVA_HOME
           haxelib run lime config ANDROID_SETUP true
-          haxelib set lime 7.9.0
-          haxelib set flixel 5.2.2
-          haxelib set flixel-addons 3.0.2
-          haxelib set hxcpp 4.2.1
           haxelib list
         env:
           ANDROID_NDK_HOME: ${{ steps.setup-ndk.outputs.ndk-path }}
