--- a/.github/workflows/desktop.yml
+++ b/.github/workflows/desktop.yml
@@ -42,7 +42,7 @@ jobs:
           haxelib setup C:/haxelib
           haxelib install hxcpp > /dev/null --quiet
           haxelib install lime 8.0.1
-          haxelib install openfl
+          haxelib install openfl 9.2.1
           haxelib install flixel 5.2.2
           haxelib install flixel-tools 1.5.1
           haxelib install flixel-ui 2.5.0
