--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,24 +47,22 @@ jobs:
             ~/.gradle
             export/release/android/haxe
             export/release/android/obj
-          key: cache-android-buil
-
-          
+          key: cache-android-build
 
       - name: Install Haxelib
         run: |
           haxelib setup ~/haxelib
           haxelib install hxcpp 4.2.1 > /dev/null
-          haxelib install lime 8.1.1
+          haxelib install lime 7.9.0
           haxelib install openfl 9.2.1
-          haxelib install flixel 5.5.0
+          haxelib --never install flixel 5.2.2
           haxelib run lime setup flixel
           haxelib install flixel-tools 1.5.1
           haxelib install flixel-ui 2.5.0
           haxelib install flixel-addons 3.0.2
-          haxelib install tjson 1.4.0
-          haxelib install hxCodec 2.6.0
-          haxelib install SScript 8.1.6
+          haxelib install tjson
+          haxelib install hxjsonast
+          haxelib install SScript
           haxelib install hxCodec 2.6.0
           haxelib git discord_rpc https://github.com/Aidan63/linc_discord-rpc
           haxelib git linc_luajit https://github.com/Sirox228/linc_luajit
@@ -72,7 +70,7 @@ jobs:
           haxelib install hxcpp-debug-server
           haxelib git androiddialogs https://github.com/beihu235/AndroidDialogs
           haxelib git devicelanguage https://github.com/beihu235/devicelanguage
-          haxelib list         
+          haxelib list
 
       - name: Create Version Tag
         run: echo "${{github.run_id}}" > VERSION
@@ -85,6 +83,8 @@ jobs:
           haxelib run lime config JAVA_HOME $JAVA_HOME
           haxelib run lime config ANDROID_SETUP true
           haxelib set lime 7.9.0
+          haxelib set flixel 5.2.2
+          haxelib set flixel-addons 3.0.2
           haxelib set hxcpp 4.2.1
           haxelib list
         env:
@@ -139,4 +139,3 @@ jobs:
           name: androidBuild
           path: export/release/android/bin/app/build/outputs/apk/debug
         
-              
