--- a/.github/workflows/desktop.yml
+++ b/.github/workflows/desktop.yml
@@ -50,7 +50,7 @@ jobs:
           haxelib install tjson 1.4.0
           haxelib install hxCodec 2.6.0
           haxelib git linc_luajit https://github.com/superpowers04/linc_luajit.git
-          haxelib install SScript 8.1.6
+          haxelib git SScript https://github.com/beihu235/SScript-5.0.0
           haxelib git discord_rpc https://github.com/Aidan63/linc_discord-rpc
           haxelib run lime rebuild hxcpp
           haxelib list
@@ -89,7 +89,7 @@ jobs:
           haxelib install tjson 1.4.0
           haxelib install hxCodec 2.6.0
           haxelib git linc_luajit https://github.com/superpowers04/linc_luajit.git
-          haxelib install SScript 8.1.6
+          haxelib git SScript https://github.com/beihu235/SScript-5.0.0
           haxelib git discord_rpc https://github.com/Aidan63/linc_discord-rpc
           haxelib run lime rebuild hxcpp
           haxelib list
