--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -41,13 +41,25 @@ jobs:
       - name: Install Libraries
         run: |
           haxelib setup ~/haxelib
-    
-          haxelib install hmm --quiet
-          haxelib run hmm install --quiet
-          
-          
+          haxelib install hxcpp 4.2.1 > /dev/null
+          haxelib install lime
+          haxelib install openfl
+          haxelib install flixel
+          haxelib run lime setup flixel
+          haxelib install flixel-tools
+          haxelib install flixel-ui
+          haxelib install flixel-addons
+          haxelib install tjson
+          haxelib install hxjsonast
+          haxelib install SScript
+          haxelib git hxCodec https://github.com/SPLCoding/hxCodec-but-it-works-xd.git
+          haxelib git discord_rpc https://github.com/Aidan63/linc_discord-rpc
+          haxelib git linc_luajit https://github.com/Sirox228/linc_luajit
+          haxelib git extension-androidtools https://github.com/MaysLastPlay77/extension-androidtools
+          haxelib install hxcpp-debug-server
           haxelib git androiddialogs https://github.com/beihu235/AndroidDialogs
           haxelib git devicelanguage https://github.com/beihu235/devicelanguage
+          haxelib list
 
       - name: Configure Android
         run: |
