--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -53,6 +53,7 @@ jobs:
           haxelib install hxjsonast
           haxelib install SScript
           haxelib install flxanimate
+          haxelib install extension-orientation
           haxelib git hxCodec https://github.com/SPLCoding/hxCodec-but-it-works-xd.git
           haxelib git discord_rpc https://github.com/Aidan63/linc_discord-rpc
           haxelib git linc_luajit https://github.com/Sirox228/linc_luajit
