--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -52,11 +52,11 @@ jobs:
           haxelib install tjson
           haxelib install hxjsonast
           haxelib install SScript
-          haxelib install flxanimate
           haxelib install extension-orientation
-          haxelib git hxCodec https://github.com/SPLCoding/hxCodec-but-it-works-xd.git
-          haxelib git discord_rpc https://github.com/Aidan63/linc_discord-rpc
-          haxelib git linc_luajit https://github.com/Sirox228/linc_luajit
+          haxelib git flxanimate https://github.com/ShadowMario/flxanimate
+          haxelib install hxCodec 2.6.0
+          haxelib git discord_rpc https://github.com/MAJigsaw77/hxdiscord_rpc
+          haxelib git linc_luajit https://github.com/superpowers04/linc_luajit
           haxelib git extension-androidtools https://github.com/MaysLastPlay77/extension-androidtools
           haxelib install hxcpp-debug-server
           haxelib git androiddialogs https://github.com/beihu235/AndroidDialogs
