--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -41,11 +41,28 @@ jobs:
       - name: Install Libraries
         run: |
           haxelib setup ~/haxelib
-          haxelib install hmm --quiet
-          haxelib run hmm install --quiet
+          haxelib install hxcpp 4.3.2 > /dev/null
+          haxelib install lime
+          haxelib install openfl
+          haxelib install flixel
+          haxelib run lime setup flixel
+          haxelib install flixel-tools
+          haxelib install flixel-ui
+          haxelib install flixel-addons
+          haxelib install tjson
+          haxelib install hxjsonast
+          haxelib install SScript
+          haxelib git extension-orientation https://github.com/HaxeExtension/extension-orientation
+          haxelib git flxanimate https://github.com/ShadowMario/flxanimate@dev
+          haxelib install hxCodec 2.6.0
+          haxelib git discord_rpc https://github.com/MAJigsaw77/hxdiscord_rpc
+          haxelib git linc_luajit https://github.com/superpowers04/linc_luajit
           haxelib git extension-androidtools https://github.com/MaysLastPlay77/extension-androidtools
+          haxelib install hxcpp-debug-server
           haxelib git androiddialogs https://github.com/beihu235/AndroidDialogs
           haxelib git devicelanguage https://github.com/beihu235/devicelanguage
+          haxelib list
+
       - name: Configure Android
         run: |
           haxelib run lime config ANDROID_SDK $ANDROID_HOME
@@ -55,7 +72,7 @@ jobs:
           haxelib list
 
       - name: Compile
-        run: haxelib run lime build android -final -D officialBuild
+        run: haxelib run lime build android -arm64 -final -D officialBuild
         env:
           cert_pass: nullfunni
           cert_alias_pass: nullfunni
