--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -43,7 +43,8 @@ jobs:
           haxelib setup ~/haxelib
           haxelib setup ~/haxelib
           haxelib install hmm --quiet
-          haxelib run hmm install --quiet                    
+          haxelib run hmm install --quiet         
+          haxelib install hxcpp           
           haxelib git extension-androidtools https://github.com/MaysLastPlay77/extension-androidtools          
           haxelib git androiddialogs https://github.com/beihu235/AndroidDialogs
           haxelib git devicelanguage https://github.com/beihu235/devicelanguage
