--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -25,8 +25,8 @@ jobs:
       - name: Setup Java JDK
         uses: actions/setup-java@main
         with:
-          distribution: 'temurin'
-          java-version: '17'
+          distribution: 'zulu'
+          java-version: '11'
 
       - name: Setup Haxe
         uses: krdlab/setup-haxe@master
