--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,4 +1,4 @@
-name: Android + Release
+name: Android Build
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
   push:
@@ -16,17 +16,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@main
 
-      - name: Setup Android NDK
-        uses: nttld/setup-ndk@main
-        id: setup-ndk
-        with:
-          ndk-version: r21e
-
       - name: Setup Java JDK
         uses: actions/setup-java@main
         with:
-          distribution: 'zulu'
-          java-version: '11'
+          distribution: 'temurin'
+          java-version: '17'
 
       - name: Setup Haxe
         uses: krdlab/setup-haxe@master
@@ -47,21 +41,18 @@ jobs:
       - name: Install Libraries
         run: |
           haxelib setup ~/haxelib
-          haxelib setup ~/haxelib
           haxelib install hmm --quiet
-          haxelib run hmm install --quiet   
+          haxelib run hmm install --quiet
+          haxelib install hxcpp > /dev/null --quiet
           haxelib git extension-androidtools https://github.com/MaysLastPlay77/extension-androidtools          
           haxelib git androiddialogs https://github.com/beihu235/AndroidDialogs
           haxelib git devicelanguage https://github.com/beihu235/devicelanguage
-          haxelib list
-
       - name: Configure Android
         run: |
           haxelib run lime config ANDROID_SDK $ANDROID_HOME
           haxelib run lime config ANDROID_NDK_ROOT $ANDROID_NDK_HOME
           haxelib run lime config JAVA_HOME $JAVA_HOME
           haxelib run lime config ANDROID_SETUP true
-          haxelib list
 
       - name: Compile
         run: haxelib run lime build android -arm64 -final -D officialBuild
