--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,4 +1,6 @@
-name: Android Build
+name: androidBuild
+
+# Controls when the action will run.
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
   push:
@@ -8,10 +10,13 @@ on:
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
+
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  Build:
+  # This workflow contains a single job called "build"
+  buildAndroid:
+    name: buildAndroid
     runs-on: ubuntu-latest
-    permissions: write-all
     steps:
       - name: Checkout
         uses: actions/checkout@main
@@ -25,48 +30,71 @@ jobs:
       - name: Setup Java JDK
         uses: actions/setup-java@main
         with:
-          distribution: 'temurin'
-          java-version: '17'
+          distribution: 'zulu'
+          java-version: '11'
 
       - name: Setup Haxe
         uses: krdlab/setup-haxe@master
         with:
-          haxe-version: latest
+          haxe-version: 4.2.5
 
       - name: Restore Previous Cache
-        if: ${{ always() }}
         id: cache-debug-build-android-restore
         uses: actions/cache/restore@main
         with:
           path: |
+            ~/haxelib
             ~/.gradle
             export/release/android/haxe
             export/release/android/obj
           key: cache-android-build
 
-      - name: Install Libraries
+      - name: Install Haxelib
         run: |
           haxelib setup ~/haxelib
-          haxelib install hmm --quiet
-          haxelib run hmm install --quiet
-          haxelib install hxcpp > /dev/null --quiet          
+          haxelib git hxcpp https://github.com/mcagabe19-stuff/hxcpp > /dev/null --quiet
+          haxelib install hxcpp-debug-server
+          haxelib install lime 7.9.0
+          haxelib install openfl 9.2.0
+          haxelib install flixel 5.2.2
+          haxelib install flixel-tools 1.5.1
+          haxelib install flixel-ui 2.5.0
+          haxelib install flixel-addons 3.0.2
+          haxelib install tjson 1.4.0
+          haxelib install hxCodec 2.6.0
+          haxelib install SScript 8.1.6
+          haxelib install hscript 2.5.0
+          haxelib install hxCodec 2.6.0
+          haxelib git hxdiscord_rpc https://github.com/MAJigsaw77/hxdiscord_rpc
+          haxelib git flxanimate https://github.com/beihu235/flxanimate
+          haxelib git linc_luajit https://github.com/superpowers04/linc_luajit
+          haxelib git extension-androidtools https://github.com/MaysLastPlay77/extension-androidtools
+          haxelib git extension-orientation https://github.com/HaxeExtension/extension-orientation.git
           haxelib git androiddialogs https://github.com/beihu235/AndroidDialogs
           haxelib git devicelanguage https://github.com/beihu235/devicelanguage
+          haxelib list         
+
+      - name: Create Version Tag
+        run: echo "${{github.run_id}}" > VERSION
+
       - name: Configure Android
         run: |
+          haxelib run lime setup -alias -y
           haxelib run lime config ANDROID_SDK $ANDROID_HOME
           haxelib run lime config ANDROID_NDK_ROOT $ANDROID_NDK_HOME
           haxelib run lime config JAVA_HOME $JAVA_HOME
           haxelib run lime config ANDROID_SETUP true
+          haxelib list
+        env:
+          ANDROID_NDK_HOME: ${{ steps.setup-ndk.outputs.ndk-path }}
 
-      - name: Compile
-        run: haxelib run lime build android -arm64 -final -D officialBuild
+      - name: Building
+        run: haxelib run lime build android -${{ matrix.arch }}
         env:
           cert_pass: nullfunni
           cert_alias_pass: nullfunni
 
       - name: Clear Previous Cache
-        if: ${{ always() }}
         uses: actions/github-script@main
         with:
           script: |
@@ -93,11 +121,11 @@ jobs:
             }
 
       - name: Save Current Cache
-        if: ${{ always() }}
         id: cache-release-build-android-save
         uses: actions/cache/save@main
         with:
           path: |
+            ~/haxelib
             ~/.gradle
             export/release/android/haxe
             export/release/android/obj
@@ -107,5 +135,5 @@ jobs:
         uses: actions/upload-artifact@main
         with:
           name: androidBuild
-          path: export/release/android/bin/app/build/outputs/apk/debug    
-  
+          path: export/release/android/bin/app/build/outputs/apk/debug
+        
