--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -30,13 +30,13 @@ jobs:
       - name: Setup Java JDK
         uses: actions/setup-java@main
         with:
-          distribution: 'zulu'
-          java-version: '11'
+          distribution: 'temurin'
+          java-version: '17'
 
       - name: Setup Haxe
         uses: krdlab/setup-haxe@master
         with:
-          haxe-version: 4.2.5
+          haxe-version: latest
 
       - name: Restore Previous Cache
         id: cache-debug-build-android-restore
